<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FrameworkDesign</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="defaultActivityProgressDialogPrompt">请等待&#8230;</string>
    <string name="service_running_prompt">服务正在运行</string>
    <string name="imagelost">图片遗失</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">向上拉查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="receiving">接收中&#8230;</string>
    <string name="pointRefresh">没有数据，点击刷新</string>
    <string name="loading">正在加载&#8230;</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="getDataFail">获取数据失败！</string>
    <string name="format_DateAndTime">%1$s/%2$s/%3$s %4$s:%5$s</string>
    <string name="format_Date">%1$s/%2$s/%3$s</string>
    <string name="format_DateNoYear">%1$s/%2$s</string>
    <string name="format_TIME">%1$s:%2$s</string>
    <string name="format_DateAndTimeNoYear">%1$s/%2$s %3$s:%4$s</string>
    <string name="softUpdate">软件更新</string>
    <string name="update">更新</string>
    <string name="update_prompt">检测到新版本，立即更新吗？</string>
    <string name="lateUpdate">稍后更新</string>
    <string name="Updating">正在更新</string>
    <string name="cancel">取消</string>
    <string name="downloadFail">下载失败！</string>
    <string name="clickDialogCancelBtn_prompt">取消下载，请点击对话框中的取消按钮！</string>
    <string name="versionNewest_prompt">亲，您使用的版本就是最新的哦！</string>
    <string name="tab01_text">第一页</string>
    <string name="tab02_text">第二页</string>
    <string name="tab03_text">第三页</string>
    <string name="tab04_text">第四页</string>

</resources>