<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_bg"
    android:orientation="vertical" >

    <com.keanbin.framework.widget.CustomViewPager
        android:id="@+id/vp_activityMain_viewPage"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_bar"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingTop="3dp" >

        <!-- Tab项 -->

        <LinearLayout
            android:id="@+id/ll_activityMain_oneTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_activityMain_oneTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagelost"
                android:src="@drawable/tab_one_normal" />

            <TextView
                android:id="@+id/tv_activityMain_oneTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab01_text"
                android:textColor="@color/tabTextColor_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activityMain_twoTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_activityMain_twoTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagelost"
                android:src="@drawable/tab_two_normal" />

            <TextView
                android:id="@+id/tv_activityMain_twoTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab02_text"
                android:textColor="@color/tabTextColor_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_activityMain_threeTab"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/iv_activityMain_threeTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagelost"
                android:src="@drawable/tab_three_normal" />

            <TextView
                android:id="@+id/tv_activityMain_threeTab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab03_text"
                android:textColor="@color/tabTextColor_normal"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <LinearLayout
                android:id="@+id/ll_activityMain_fourTab"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/iv_activityMain_fourTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/imagelost"
                    android:src="@drawable/tab_four_normal" />

                <TextView
                    android:id="@+id/tv_activityMain_fourTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tab04_text"
                    android:textColor="@color/tabTextColor_normal"
                    android:textSize="12sp" />
            </LinearLayout>

            <com.keanbin.framework.widget.UnreadIcon
                android:id="@+id/unreadIcon_activityMain_tabMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:visibility="gone" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>